default/objects/Account/fields/Account_Nr__c.field-meta.xml
<CustomField>
    <fullName>Account_Nr__c</fullName>
    <displayFormat>FC-{000000000}</displayFormat>
    <label>Account Nr.</label>
    <type>AutoNumber</type>
</CustomField>