default/objects/Account/fields/Account_Nr_PPR_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Account_Nr_PPR_Legacy__c</fullName>
    <label>Account Nr. Legacy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>