default/objects/Account/fields/Account_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Profile__c</fullName>
    <formula>Owner.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Profile</label>
    <type>Text</type>
</CustomField>