default/objects/Account/fields/Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Role</label>
    <type>Text</type>
</CustomField>