default/objects/Account/fields/Account_Type_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_from_Lead__c</fullName>
    <label>Account Type from Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>