default/objects/Account/fields/Accountname_Zusatz__c.field-meta.xml
<CustomField>
    <fullName>Accountname_Zusatz__c</fullName>
    <label>Accountname Zusatz</label>
    <length>200</length>
    <type>Text</type>
</CustomField>