default/objects/Account/fields/Active_Change_Owner_Request__c.field-meta.xml
<CustomField>
    <fullName>Active_Change_Owner_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Change Owner Request</label>
    <type>Checkbox</type>
</CustomField>