default/objects/Account/fields/Adress_delivery__c.field-meta.xml
<CustomField>
    <fullName>Adress_delivery__c</fullName>
    <label>Adress delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>