default/objects/Account/fields/Adresszusatz__c.field-meta.xml
<CustomField>
    <fullName>Adresszusatz__c</fullName>
    <label>Adresszusatz</label>
    <length>50</length>
    <type>Text</type>
</CustomField>