default/objects/Account/fields/ADRNR_L__c.field-meta.xml
<CustomField>
    <fullName>ADRNR_L__c</fullName>
    <label>ADRNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>