default/objects/Account/fields/Advertisement_Material_Sent__c.field-meta.xml
<CustomField>
    <fullName>Advertisement_Material_Sent__c</fullName>
    <description>Date on which we sent the advertisement material to the retailer</description>
    <label>Advertisement Material Sent</label>
    <type>Date</type>
</CustomField>