default/objects/Account/fields/AGB_Best_tigt__c.field-meta.xml
<CustomField>
    <fullName>AGB_Best_tigt__c</fullName>
    <inlineHelpText>Accepted T&amp;Cs (Yes/No) - always Yes</inlineHelpText>
    <label>AGB-Bestätigt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
                <default>true</default>
                <label>Ja</label>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>