default/objects/Account/fields/Agree_to_process_pers_data_for_marketing__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_process_pers_data_for_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer agrees that his personal information can be processed for marketing purposes.</description>
    <inlineHelpText>Customer agrees that his personal information can be processed for marketing purposes.</inlineHelpText>
    <label>Agree to process pers data for marketing</label>
    <type>Checkbox</type>
</CustomField>