default/objects/Account/fields/Agree_to_receive_comm_info_by_email__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_receive_comm_info_by_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer agrees to receive the commercial information by email.</description>
    <inlineHelpText>Customer agrees to receive the commercial information by email.</inlineHelpText>
    <label>Agree to receive comm info by email</label>
    <type>Checkbox</type>
</CustomField>