default/objects/Account/fields/Allstar_Email__c.field-meta.xml
<CustomField>
    <fullName>Allstar_Email__c</fullName>
    <label>Allstar Email</label>
    <type>Email</type>
</CustomField>