default/objects/Account/fields/Alternate_Disclosure_Group_GOLD__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Disclosure_Group_GOLD__c</fullName>
    <defaultValue>"FCCI0149"</defaultValue>
    <label>Alternate Disclosure Group GOLD</label>
    <length>9</length>
    <type>Text</type>
</CustomField>