default/objects/Account/fields/Alternate_Disclosure_Group_PLUS__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Disclosure_Group_PLUS__c</fullName>
    <defaultValue>"FCCI0099"</defaultValue>
    <label>Alternate Disclosure Group PLUS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>