default/objects/Account/fields/Alternate_Disclosure_Group_SILVER__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Disclosure_Group_SILVER__c</fullName>
    <defaultValue>"FCCI0000"</defaultValue>
    <label>Alternate Disclosure Group SILVER</label>
    <length>9</length>
    <type>Text</type>
</CustomField>