default/objects/Account/fields/Antrag_generieren__c.field-meta.xml
<CustomField>
    <fullName>Antrag_generieren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antrag generieren</label>
    <type>Checkbox</type>
</CustomField>