default/objects/Account/fields/Anzahl_der_Karten__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_der_Karten__c</fullName>
    <label>Anzahl der Karten</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>