default/objects/Account/fields/Anzahl_der_Karten_All__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_der_Karten_All__c</fullName>
    <description>Общее карт по Организации</description>
    <label>Anzahl der Karten All</label>
    <summarizedField>Opportunity.Anzahl_der_Karten__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>