default/objects/Account/fields/Anzahl_PKW__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_PKW__c</fullName>
    <label>Anzahl PKW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>