default/objects/Account/fields/Anzahl_versendeter_Mappen__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_versendeter_Mappen__c</fullName>
    <label>Anzahl versendeter Mappen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>