default/objects/Account/fields/Art_des_Standorts__c.field-meta.xml
<CustomField>
    <fullName>Art_des_Standorts__c</fullName>
    <label>Art des Standorts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stammhaus</fullName>
            </value>
            <value>
                <fullName>Filiale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>