default/objects/Account/fields/Aware_of_NoFee_Offer_conditions__c.field-meta.xml
<CustomField>
    <fullName>Aware_of_NoFee_Offer_conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Retailer is aware of  NoFee offer that he should promote among his customers</inlineHelpText>
    <label>Aware of NoFee Offer conditions</label>
    <type>Checkbox</type>
</CustomField>