default/objects/Account/fields/Aware_of_retailer_bonus_program__c.field-meta.xml
<CustomField>
    <fullName>Aware_of_retailer_bonus_program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Retailer is aware of the bonus scheme for submitting new leads</inlineHelpText>
    <label>Aware of retailer bonus program</label>
    <type>Checkbox</type>
</CustomField>