default/objects/Account/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <description>Наименование банка</description>
    <label>Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>