default/objects/Account/fields/Beschaeftigte__c.field-meta.xml
<CustomField>
    <fullName>Beschaeftigte__c</fullName>
    <label>Beschäftigte *</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-4</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50-74</fullName>
            </value>
            <value>
                <fullName>75-99</fullName>
            </value>
            <value>
                <fullName>100-149</fullName>
            </value>
            <value>
                <fullName>150-199</fullName>
            </value>
            <value>
                <fullName>&gt;200</fullName>
            </value>
            <value>
                <fullName>k.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>