default/objects/Account/fields/BESCHKL_L__c.field-meta.xml
<CustomField>
    <fullName>BESCHKL_L__c</fullName>
    <label>BESCHKL</label>
    <length>5</length>
    <type>Text</type>
</CustomField>