default/objects/Account/fields/Billing_Address_Comments__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Comments__c</fullName>
    <label>Billing Address Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>