default/objects/Account/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>