default/objects/Account/fields/Billing_OKATO__c.field-meta.xml
<CustomField>
    <fullName>Billing_OKATO__c</fullName>
    <label>Billing OKATO</label>
    <length>11</length>
    <type>Text</type>
</CustomField>