default/objects/Account/fields/BillingArea__c.field-meta.xml
<CustomField>
    <fullName>BillingArea__c</fullName>
    <externalId>true</externalId>
    <label>BillingArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>