default/objects/Account/fields/BizMachine_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>BizMachine_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Account is being monitored by BizMachine or not.</description>
    <label>BizMachine Monitoring</label>
    <type>Checkbox</type>
</CustomField>