default/objects/Account/fields/Black_list_check_code__c.field-meta.xml
<CustomField>
    <fullName>Black_list_check_code__c</fullName>
    <description>Код решения по черному списку в кредитной фабрике</description>
    <inlineHelpText>Код решения по черному списку в кредитной фабрике</inlineHelpText>
    <label>Black list code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>