default/objects/Account/fields/Black_list_check_decision__c.field-meta.xml
<CustomField>
    <fullName>Black_list_check_decision__c</fullName>
    <description>Решение проверки по черному листу в кредитной фабрике</description>
    <inlineHelpText>Решение проверки по черному листу в кредитной фабрике</inlineHelpText>
    <label>Black list decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>RMD approval</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Reseller approval</fullName>
            </value>
            <value>
                <fullName>No data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>