default/objects/Account/fields/Branche_NACE__c.field-meta.xml
<CustomField>
    <fullName>Branche_NACE__c</fullName>
    <label>Branche (NACE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accommodation and food service activities</fullName>
            </value>
            <value>
                <fullName>Activities of extraterritorial organizations and bodies</fullName>
            </value>
            <value>
                <fullName>Activities of households as employers</fullName>
            </value>
            <value>
                <fullName>Administrative and support service activities</fullName>
            </value>
            <value>
                <fullName>Agriculture, forestry and fishing</fullName>
            </value>
            <value>
                <fullName>Arts, entertainment and recreation</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electricity, gas, steam and air conditioning supply</fullName>
            </value>
            <value>
                <fullName>Financial and insurance activities</fullName>
            </value>
            <value>
                <fullName>Human health and social work activities</fullName>
            </value>
            <value>
                <fullName>Information and communication</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining and quarrying</fullName>
            </value>
            <value>
                <fullName>Other services activities</fullName>
            </value>
            <value>
                <fullName>Professional, scientific and technical activities</fullName>
            </value>
            <value>
                <fullName>Public administration and defense; compulsory social security</fullName>
            </value>
            <value>
                <fullName>Real estate activities</fullName>
            </value>
            <value>
                <fullName>Transporting and storage</fullName>
            </value>
            <value>
                <fullName>Water supply; sewerage; waste management and remediation activities</fullName>
            </value>
            <value>
                <fullName>Wholesale and retail trade; repair of motor vehicles and motorcycles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>