default/objects/Account/fields/Branchencode__c.field-meta.xml
<CustomField>
    <fullName>Branchencode__c</fullName>
    <label>Branchencode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>