default/objects/Account/fields/Branchentext__c.field-meta.xml
<CustomField>
    <fullName>Branchentext__c</fullName>
    <label>Branchentext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>