default/objects/Account/fields/BRC_Brand__c.field-meta.xml
<CustomField>
    <fullName>BRC_Brand__c</fullName>
    <label>BRC_Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>DEA</fullName>
            </value>
            <value>
                <fullName>Non Branded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>