default/objects/Account/fields/Bundesland__c.field-meta.xml
<CustomField>
    <fullName>Bundesland__c</fullName>
    <label>Bundesland *</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Baden-Württemberg</fullName>
            </value>
            <value>
                <fullName>Bayern</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Brandenburg</fullName>
            </value>
            <value>
                <fullName>Bremen</fullName>
            </value>
            <value>
                <fullName>Hamburg</fullName>
            </value>
            <value>
                <fullName>Hessen</fullName>
            </value>
            <value>
                <fullName>Mecklenburg-Vorpommern</fullName>
            </value>
            <value>
                <fullName>Niedersachsen</fullName>
            </value>
            <value>
                <fullName>Nordrhein-Westfalen</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rheinland-Pfalz</fullName>
            </value>
            <value>
                <fullName>Saarland</fullName>
            </value>
            <value>
                <fullName>Sachsen</fullName>
            </value>
            <value>
                <fullName>Sachsen-Anhalt</fullName>
            </value>
            <value>
                <fullName>Schleswig-Holstein</fullName>
            </value>
            <value>
                <fullName>Thüringen</fullName>
            </value>
            <value>
                <fullName>Wien</fullName>
            </value>
            <value>
                <fullName>Niederösterreich</fullName>
            </value>
            <value>
                <fullName>Oberösterreich</fullName>
            </value>
            <value>
                <fullName>Steiermark</fullName>
            </value>
            <value>
                <fullName>Burgenland</fullName>
            </value>
            <value>
                <fullName>Kärnten</fullName>
            </value>
            <value>
                <fullName>Salzburg</fullName>
            </value>
            <value>
                <fullName>Tirol</fullName>
            </value>
            <value>
                <fullName>Vorarlberg</fullName>
            </value>
            <value>
                <fullName>Antwerpen</fullName>
            </value>
            <value>
                <fullName>Vlaams-Brabant</fullName>
            </value>
            <value>
                <fullName>Hainaut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>