default/objects/Account/fields/Card_Count__c.field-meta.xml
<CustomField>
    <fullName>Card_Count__c</fullName>
    <label>Card Count</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>