default/objects/Account/fields/CardProcessing_abgeschlossen__c.field-meta.xml
<CustomField>
    <fullName>CardProcessing_abgeschlossen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CardProcessing abgeschlossen</label>
    <type>Checkbox</type>
</CustomField>