default/objects/Account/fields/Cards_delivery_courier_info__c.field-meta.xml
<CustomField>
    <fullName>Cards_delivery_courier_info__c</fullName>
    <label>Cards delivery courier info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>