default/objects/Account/fields/CCS_account_duplicate__c.field-meta.xml
<CustomField>
    <fullName>CCS_account_duplicate__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS_account_duplicate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>