default/objects/Account/fields/ccs_account_merge_18ID__c.field-meta.xml
<CustomField>
    <fullName>ccs_account_merge_18ID__c</fullName>
    <formula>CCS_account_merge_ID__c
            &amp; MID("ABCDEFGHIJKLMNOPQRSTUVWXYZ012345",(
            IF(FIND(MID(CCS_account_merge_ID__c,1,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,1,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,2,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,2,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,3,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,4,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,4,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,8,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,5,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,16,0)
            )+1,1)
            &amp; MID("ABCDEFGHIJKLMNOPQRSTUVWXYZ012345",(
            IF(FIND(MID(CCS_account_merge_ID__c,6,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,1,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,7,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,2,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,8,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,4,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,9,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,8,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,10,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,16,0)
            )+1,1)
            &amp; MID("ABCDEFGHIJKLMNOPQRSTUVWXYZ012345",(
            IF(FIND(MID(CCS_account_merge_ID__c,11,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,1,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,12,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,2,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,13,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,4,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,14,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,8,0)
            +IF(FIND(MID(CCS_account_merge_ID__c,15,1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ")&gt;0,16,0)
            )+1,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ccs_account_merge_18ID</label>
    <type>Text</type>
</CustomField>