default/objects/Account/fields/CCS_account_merge__c.field-meta.xml
<CustomField>
    <fullName>CCS_account_merge__c</fullName>
    <label>CCS_account_merge</label>
    <length>20</length>
    <type>Text</type>
</CustomField>