default/objects/Account/fields/CCS_account_merge_status__c.field-meta.xml
<CustomField>
    <fullName>CCS_account_merge_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCS_account_merge_status</label>
    <type>Checkbox</type>
</CustomField>