default/objects/Account/fields/CCS_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CCS_Account_Record_Type__c</fullName>
    <label>CCS Account Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>