default/objects/Account/fields/CCS_agric_constr_mach_over_3_5t__c.field-meta.xml
<CustomField>
    <fullName>CCS_agric_constr_mach_over_3_5t__c</fullName>
    <label>Number of EV cars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>