default/objects/Account/fields/CCS_Attrition_date__c.field-meta.xml
<CustomField>
    <fullName>CCS_Attrition_date__c</fullName>
    <description>Last call date for Attrition</description>
    <label>CCS Attrition date</label>
    <type>Date</type>
</CustomField>