default/objects/Account/fields/CCS_Attrition_Flag__c.field-meta.xml
<CustomField>
    <fullName>CCS_Attrition_Flag__c</fullName>
    <label>CCS Attrition Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>neznámo</fullName>
            </value>
            <value>
                <fullName>důvod neuveden</fullName>
            </value>
            <value>
                <fullName>kreditní důvody</fullName>
            </value>
            <value>
                <fullName>změna subjektu</fullName>
            </value>
            <value>
                <fullName>reorganizace</fullName>
            </value>
            <value>
                <fullName>Konkurence</fullName>
            </value>
            <value>
                <fullName>jiné</fullName>
            </value>
            <value>
                <fullName>nedovoláno</fullName>
            </value>
            <value>
                <fullName>nevoláno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>