default/objects/Account/fields/CCS_Attrition_Success__c.field-meta.xml
<CustomField>
    <fullName>CCS_Attrition_Success__c</fullName>
    <label>CCS Attrition Success</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>zájem</fullName>
            </value>
            <value>
                <fullName>nezájem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>