default/objects/Account/fields/CCS_CardCountBuss__c.field-meta.xml
<CustomField>
    <fullName>CCS_CardCountBuss__c</fullName>
    <label>CCS_CardCountBuss</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>