default/objects/Account/fields/CCS_CardCountLimit__c.field-meta.xml
<CustomField>
    <fullName>CCS_CardCountLimit__c</fullName>
    <label>CCS_CardCountLimit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>