default/objects/Account/fields/CCS_CardCountTankefekt__c.field-meta.xml
<CustomField>
    <fullName>CCS_CardCountTankefekt__c</fullName>
    <label>CCS_CardCountTankefekt</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>