default/objects/Account/fields/CCS_CardCountUTA__c.field-meta.xml
<CustomField>
    <fullName>CCS_CardCountUTA__c</fullName>
    <label>CCS_CardCountUTA</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>