default/objects/Account/fields/CCS_CARNET_NR__c.field-meta.xml
<CustomField>
    <fullName>CCS_CARNET_NR__c</fullName>
    <label>CCS_CARNET_NR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>