default/objects/Account/fields/CCS_Client_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>CCS_Client_Satisfaction__c</fullName>
    <label>CCS Client Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>neznámo</fullName>
            </value>
            <value>
                <fullName>ano</fullName>
            </value>
            <value>
                <fullName>ne</fullName>
            </value>
            <value>
                <fullName>nevoláno</fullName>
            </value>
            <value>
                <fullName>nedovoláno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>