default/objects/Account/fields/CCS_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_Company_ID__c</fullName>
    <inlineHelpText>IČO</inlineHelpText>
    <label>ICO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>