default/objects/Account/fields/CCS_Credit_score__c.field-meta.xml
<CustomField>
    <fullName>CCS_Credit_score__c</fullName>
    <label>CCS Credit score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>