default/objects/Account/fields/CCS_Cribis__c.field-meta.xml
<CustomField>
    <fullName>CCS_Cribis__c</fullName>
    <label>CCS Cribis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>Š</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>