default/objects/Account/fields/CCS_Datum_posledn_ho_kontaktu__c.field-meta.xml
<CustomField>
    <fullName>CCS_Datum_posledn_ho_kontaktu__c</fullName>
    <label>CCS Datum posledního kontaktu</label>
    <type>Date</type>
</CustomField>