default/objects/Account/fields/CCS_DCG__c.field-meta.xml
<CustomField>
    <fullName>CCS_DCG__c</fullName>
    <label>CCS_DCG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>