default/objects/Account/fields/CCS_Email_2__c.field-meta.xml
<CustomField>
    <fullName>CCS_Email_2__c</fullName>
    <description>Transfered Email info from Lead.CCS_Email_2</description>
    <label>CCS Email 2</label>
    <type>Email</type>
</CustomField>